[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "rack-field-guard"
version = "0.0.0" # the correct value will be set in CI pipeline
description = "NetBox plugin to restrict Rack edits to a specific custom field for a specific group"
authors = [
  { name = "Maksym Troshyn", email = "maksym.troshyn@advanced.host" }
  ]
maintainers = [
  { name = "Maksym Troshyn", email = "maksym.troshyn@advanced.host" }
  ]
readme = "README.md"
repository = "https://git.ahback.com/intit/netbox/plugins/netbox-rack-field-guard"
homepage = "https://git.ahback.com/intit/netbox/plugins/netbox-rack-field-guard"
keywords = ["netbox", "permissions", "rack"]
license = "MIT"
packages = [{ include = "rack_field_guard" }]
include = [
  { path = "README.md", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.plugins."netbox.plugins"]
rack_field_guard = "rack_field_guard:config"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-mock = "^3.14.0"
pytest-cov = "^6.0.0"
black = "^24.0.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"

[[tool.poetry.source]]
name = "ahback"
url = "https://nexus-private.ahback.com/repository/pypi/"
priority = "primary"


[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]